--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   padding: 3%;
+  height: auto;
 }
 
 h1 {
@@ -15,12 +16,39 @@ h1 {
 }
 
 .list {
-  width: 30vw;
+  width: 50vw;
   gap: 5%;
 }
 
 .listHeader {
   display: flex;
-  gap: 1%;
-  margin-bottom: 1%;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.refresh-btn {
+  width: 50px;
+}
+
+.list-box {
+  border: 2px solid Black;
+}
+
+.list-item {
+  border: 1px solid black;
+}
+
+.input {
+  height: auto;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-top: 5px;
+}
+
+.submit-btn {
+  width: 80px;
+  align-self: flex-end;
 }
